# movies_backend

./: .gitignore  main.py  pyproject.toml
api/: dependencies.py
api/routes/: analytics.py  main.py
db/: db_conn.py  how_to_setup_db.txt  init_db.py
repositories/: analytics.py
schemas/: schemas.py
services/: analytics.py
