[tool.poetry]
name = "movies-backend"
version = "0.1.0"
description = ""
authors = ["Nik1t7n <20nik.nosov21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
duckdb = "^1.1.3"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
